--- a/package.json
+++ b/package.json
@@ -28,6 +28,10 @@
     "typescript": "^4.4.3"
   },
   "dependencies": {
-    "@aws-sdk/client-dynamodb": "^3.33.0"
+    "@aws-sdk/client-codebuild": "^3.33.0",
+    "@aws-sdk/client-codedeploy": "^3.33.0",
+    "@aws-sdk/client-dynamodb": "^3.33.0",
+    "@aws-sdk/client-sts": "^3.33.0",
+    "@aws-sdk/util-dynamodb": "^3.33.0"
   }
 }
