--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint src/ --ext .js,.jsx,.ts,.tsx",
     "build": "./build.sh",
     "bundle": "./package.sh",
+    "docs": "typedoc",
     "start": "tsc -p tsconfig.json && node -r dotenv/config ./build/index.js",
     "clean": "rm -rf build build"
   },
@@ -26,6 +27,8 @@
     "jest": "^27.2.1",
     "ts-jest": "^27.0.5",
     "ts-node": "^10.2.1",
+    "typedoc": "^0.22.13",
+    "typedoc-plugin-markdown": "^3.11.14",
     "typescript": "^4.4.3"
   },
   "dependencies": {
