--- a/tsconfig.json
+++ b/tsconfig.json
@@ -99,10 +99,12 @@
     // "skipDefaultLibCheck": true,                      /* Skip type checking .d.ts files that are included with TypeScript. */
     "skipLibCheck": true /* Skip type checking all .d.ts files. */
   },
+  "include": ["src/**/*.ts"],
   "exclude": [
-    "./src/**/*.test.ts",
-    "./src/**/*.test.tsx",
-    "node_modules",
-    "./build/"
+    "__mocks__",
+    "__tests__",
+    "__tests__/**/.ts",
+    "node_modules/**/*",
+    ".build/**/*"
   ]
 }
