fix invalid SnsPolicy statement within the cloudformation template.

--- a/cloudformation/meerkat.yaml
+++ b/cloudformation/meerkat.yaml
@@ -112,7 +112,7 @@ Resources:
                 AWS:SourceAccount: !Ref AWS::AccountId
           - Sid: CrossAccountCloudWatchAlarms
             Effect: Allow
-            Principle:
+            Principal:
               AWS: "*"
             Action: "SNS:Publish"
             Resource: !Ref SnsTopic
