--- a/_dev/docker/compose-dev.yml
+++ b/_dev/docker/compose-dev.yml
@@ -3,7 +3,7 @@ services:
   dynamodb:
     command: "-jar DynamoDBLocal.jar -sharedDb -dbPath ./data"
     image: "amazon/dynamodb-local:latest"
-    container_name: dynamodb-local
+    container_name: dynamodb-meerkat-local
     ports:
       - "8000:8000"
     volumes:
