--- a/cloudformation/meerkat.yaml
+++ b/cloudformation/meerkat.yaml
@@ -1,7 +1,7 @@
 AWSTemplateFormatVersion: 2010-09-09
 Description: "Provisions the stack required by Meerkat the devops bot. Meerkat can be subscribed to SNS Topics and is especially usefull when listening for code pipeline life cycle events and cloudwatch alarms."
 
-# devops-pipeline-monitor v1.0
+# devops-pipeline-monitor v1.5.4
 Parameters:
   NameSpace:
     Type: String
@@ -20,7 +20,7 @@ Parameters:
   CodeKey:
     Type: String
     Description: The S3 key to the zip file that contains the lambda source code. (no leading slash)
-    Default: aws-meerkat-1.1.0.zip
+    Default: code-pipeline-monitor.v1.5.4.zip
 
   EnvGitProvider:
     Type: String
@@ -203,7 +203,7 @@ Resources:
           DISCORD_WEBHOOK: !Ref EnvDiscordWebhook
       PackageType: Zip
       Role: !GetAtt LambdaServiceRole.Arn
-      Runtime: nodejs14.x
+      Runtime: nodejs20.x
       Code:
         S3Bucket: !Ref CodeBucketName
         S3Key: !Ref CodeKey
