--- a/.gitignore
+++ b/.gitignore
@@ -109,3 +109,5 @@ dist
 
 # Ignore Dynameo Db Datastore mounted by docker.
 _nosql/data/*.db
+_dev/bruno/Slack/Foo.bru
+_dev/bruno/Slack/aXcelerate platform webhook.bru
