--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "aws-code-pipeline-monitor",
-  "version": "1.7.2",
+  "version": "1.8.0",
   "main": "index.js",
   "repository": "git@github.com:quicken/aws-code-pipeline-monitor.git",
   "author": "marcel <mscherzeru@gmail.com>",
@@ -11,8 +11,10 @@
     "build": "./build.sh",
     "bundle": "./package.sh",
     "docs": "typedoc",
-    "start": "tsc -p tsconfig.json && node -r dotenv/config ./build/index.js",
-    "clean": "rm -rf build build"
+    "start": "node esbuild.config.js && node -r dotenv/config ./build/index.js",
+    "clean": "rm -rf build",
+    "build:watch": "node esbuild.watch.js",
+    "analyze": "node esbuild.config.js && npx esbuild-visualizer --metadata build/meta.json"
   },
   "devDependencies": {
     "@aws-sdk/types": "^3.451.0",
@@ -24,6 +26,7 @@
     "aws-sdk-client-mock": "^3.0.0",
     "dotenv": "^16.3.1",
     "esbuild": "^0.19.6",
+    "esbuild-visualizer": "^0.4.1",
     "eslint": "^8.54.0",
     "jest": "^29.7.0",
     "ts-jest": "^29.1.1",
