--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "devDependencies": {
     "@aws-sdk/types": "^3.451.0",
     "@types/aws-lambda": "^8.10.83",
+    "@types/fs-extra": "^11.0.4",
     "@types/jest": "^29.5.8",
     "@types/node": "^20.9.2",
     "@typescript-eslint/eslint-plugin": "^6.11.0",
@@ -44,7 +45,9 @@
     "@aws-sdk/client-codebuild": "^3.454.0",
     "@aws-sdk/client-codedeploy": "^3.454.0",
     "@aws-sdk/client-dynamodb": "^3.454.0",
+    "@aws-sdk/client-ssm": "^3.454.0",
     "@aws-sdk/client-sts": "^3.454.0",
-    "@aws-sdk/util-dynamodb": "^3.454.0"
+    "@aws-sdk/util-dynamodb": "^3.454.0",
+    "fs-extra": "^11.1.1"
   }
 }
