--- a/.gitignore
+++ b/.gitignore
@@ -112,3 +112,4 @@ _nosql/data/*.db
 _dev/bruno/Slack/Foo.bru
 _dev/bruno/Slack/aXcelerate platform webhook.bru
 meerkat.code-workspace
+_dev/config/routes.json
